Add SQL queries catalog, dashboard with filters and export, and enhanced metrics
- Add SQL query manager with RAG integration for semantic search
- Add comprehensive dashboard with interactive charts and filters
- Add dashboard metrics calculator with agent/workflow filtering
- Add export functionality (CSV/JSON) for metrics
- Add new visualizations: duration distribution and success rate by agent
- Add SQL queries guide and dashboard guide documentation
- Update client to support SQL queries endpoints
- Update RAG system to support SQL queries indexing
- Clean up temporary files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,10 @@ Thumbs.db
 tmp/
 temp/
 
+# Exported files
+exported_*.json
+example_sql_queries.json
+
 # Model files (large)
 *.bin
 *.safetensors
