Add Cloudflare Agents integration for A2E
- Add A2EAgent TypeScript class extending Cloudflare Agent
- Implement HTTP client for A2E server communication
- Add callable methods for workflow execution and management
- Integrate LLM for automatic workflow generation
- Add RAG knowledge search and SQL query search support
- Include comprehensive examples and documentation
- Update .gitignore for Node.js/TypeScript files

--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,19 @@ models/
 .dmypy.json
 dmypy.json
 
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+.pnpm-debug.log*
+
+# TypeScript
+*.tsbuildinfo
+dist/
+build/
+.wrangler/
+.dev.vars
+
