--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "flask>=2.0.0",
     "flask-cors>=3.0.0",
     "requests>=2.28.0",
+    "pytz>=2023.3",
     # RAG Catalog con LokiJS y embeddings locales
     # Nota: rag_catalog debe estar en el path o instalado como paquete
     # Dependencias de sentence-transformers
